	- added detection of duplicated bios entries
	- added message when no matching software entry could be found in the -listsoftwarelist output
	- renamed valgrind logfile to just valgrind.log
	- enabled DTD validation when reading -listsoftware output
	- added filter check to only try to run compatible -listsoftware entries
	- added detection of duplicated ramsize entries
	- do not remove the valgrind output with "store_output" set to 2 (again)
	- added filter_unprintable() to common.c/.h
	- filter unprintable characters before writing to XML
	- added mrt_array and append_to_array() to common.c/.h
	- added "noreturn" attribute to cleanup_and_exit() and removed unnecessary hack to silence compiler from main()
	- added missing static to some global variables
	- added option "no_execution" to perform testruns without executing the binaries
	- added device_slot to image_entry and set it in read_softlist_entry()
	- added missing xmlCleanupParser() call in cleanup_and_exit()
	- updated WARNINGS in makefile and added clang-specific ones
	- removed unnecessary global variable listxml_output
	- moved get_xpath_nodeset() from mame_regtest.c to common.c/.h
	- suppress Linux/Unix-related messages in stdout by using SDL dummy drivers for video and audio
	- removed pngcmp binary and source since it is not part of official MAME/MESS
	- added device_part to image_entry
	- part names are now read from softwarelists and used for execution ("part<num>" is not being added to output files and folders)
	- all parts of a softwarelist entry are now being run with "use_softwarelist" set to 1
	- added support for running the first softwarelist entry for each available slot when "use_softwarelist" is set to 3
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs
	- improved summary a bit